src/test/ui/deduplicate-diagnostics-2.deduplicate.stderr
error: floating-point types cannot be used in patterns
  --> $DIR/deduplicate-diagnostics-2.rs:6:9
   |
LL |         1.0 => {}
   |         ^^^
   |
   = note: `#[deny(illegal_floating_point_literal_pattern)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/deduplicate-diagnostics-2.rs:10:9
   |
LL |         2.0 => {}
   |         ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: floating-point types cannot be used in patterns
  --> $DIR/deduplicate-diagnostics-2.rs:6:9
   |
LL |         1.0 => {}
   |         ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: aborting due to 3 previous errors

